# flashcow

./: .gitignore  Cargo.toml  docker-compose.yml
backend/: Cargo.toml
backend/sql/migrations/: m1.sql
backend/src/: api.rs  db.rs  main.rs  page.rs  util.rs
backend/templates/: container.html  test.html
doc/: image_format.md  spec.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  Home.tsx  MainLayout.tsx  ReceiptReport.tsx  apiClient.ts  index.css  main.tsx
frontend/src/components/: it-bolt.tsx  it-chip.tsx  navbar.tsx  theme-provider.tsx  theme-toggle.tsx
sql/migrations/: m1.sql
src/: main.rs
