[package]
name = "flashcow"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
serde_json = "1.0"

[dependencies.axum]
version = "0.8"
features = ["macros", "json"]

[dependencies.tokio]
version = "1.45"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4.*"
features = ["serde"]

[dependencies.sqlx]
version = "0.8"
features = ["postgres", "runtime-tokio", "macros", "chrono"]